# B4ttle

./: B4ttle  CMakeLists.txt  Makefile  README.md  action.h  bibliotheque.h  card.h  combat.h  combat_display.h  competence.h  display.c  display.h  display_sdl.h  fromInternet.c  main.c  map.h  menu.h  monster.h  movement.h  struct.h  transformation.c
cards/: ALIYOU_Reda  ALIYOU_Reda.txt  ALOISI_Come  ALOISI_Come.txt  AMBRY_Lukas  AMBRY_Lukas.txt  AZARKANE_Issam  AZARKANE_Issam.txt  BATHILY_Oussoumane  BATHILY_Oussoumane.txt  BENZENINE_YASSINE  BENZENINE_YASSINE.txt  BENZENINE_Yassine  BOSSEBOEUF_Quentin  BOSSEBOEUF_Quentin.txt  BOUAYOUN_Ayman  BOUAYOUN_Ayman.txt  CARK_Dryss  CARK_Dryss.txt  CHOUK_STEVEN  CHOUK_STEVEN.txt  CHOUK_Steven  DAUTREMEPUICH_HUGO  DAUTREMEPUICH_HUGO.txt  DAUTREMEPUICH_Hugo  DIABIRA_Mamadou  DIABIRA_Mamadou.txt  DUFRESNE_Jordan  DUFRESNE_Jordan.txt  ELEFTERIOU_Alexis  FERROUJ_ANASS  FERROUJ_ANASS.txt  FERROUJ_Anass  FRESSE_Balkis  FRESSE_Balkis.txt  GAMBO-MAGAGI_Soumaya  GAMBO-MAGAGI_Soumaya.txt  KAKOU_Marceau  KAKOU_Marceau.txt  KEOMANY_Steven  (+30 more)
cards_png/: ALOISI Come  AMBRY Lukas  BATHILY Oussoumane  BENZENINE Yassine  BOSSEBOEUF Quentin  BOUAYOUN Ayman  CARK Dryss  CHOUK Steven  DAUTREMEPUICHE Hugo  DIABIRA Mamadou  DUFRESNE Jordan  ELEFTERIOU Alexis  FRESSE Balkis  GAMBO MAGAGI Soumaya  KAKOU Marceau  KIGER Maxence  LANCELOT Romain  MONTOUTE Anthony-james  PITORIN Tom  SAGE Julien  YAHIA ABDCHAFEE Adam
competence/: ELEFTERIOU Alexis.c
deck/: 1  2  3  4  deck
maps/: city1  city2  explication  firstmap.txt  map globale  map.h  map2tst  (+5 more)
(+3 files in other folders)
